@@ -1,5 +1,8 @@
 2011-08-05  Jason Merrill  <jason@redhat.com>
 
+	PR c++/48993
+	* g++.dg/cpp0x/constexpr-48089.C: Add cases.
+
 	PR c++/49921
 	* g++.dg/cpp0x/decltype31.C: New.
 
